# python-automations

./: .gitignore  README.md  config.py  main.py  擬似コード.py
Controllers/: controller.py  handler.py
Models/: content.py  presentation.py  sequencer.py  slide.py  sorter.py
RPA/: send_key.py
Views/: popup.py  view.py
archives/csv_to_excel/: main.py  pyproject.toml
archives/facility-operation-rate-monitor/: .gitignore  Pipfile  README.md  config.yml  main.py  セットアップ.bat
archives/graph-viewer/: README.md  main.py
archives/open3d_ws/: README.md  meshing_rectangular_by_container.py
csv_to_excel/: NOTE.md
distribution/: README.md
facility-operation-rate-monitor/: Pipfile  README.md  config.yml  initializer.py  main.py  monitor_hardware_device_log.txt  monitor_input_device.py  timehelper.py  to_excel.py
flexible-renamer/: main.py  pyproject.toml
flexible-renamer/src/common/: constants.py  exceptions.py  types.py  utils.py
flexible-renamer/src/config/: config.py  parser.py
flexible-renamer/src/models/: excel.py  file.py
flexible-renamer/src/views/container/: components.py
flexible-renamer/src/views/presentational/: components.py
graph-viewer/: .gitignore  main.py  pyproject.toml  read_graphtec.py  remove_common_string.py
graph-viewer/src/: constants.py
graph-viewer/src/backend/: store.py
graph-viewer/src/common/: constants.py  exception.py  types.py  utils.py
graph-viewer/src/data/: graph.py  reader.py  store.py
graph-viewer/src/data/domains/graphtec/: store.py
graph-viewer/src/data/graph/: graph.py  metadata.py
graph-viewer/src/view/container/: components.py  popup.py
graph-viewer/src/view/container/domains/graphtec/: components.py
graph-viewer/src/view/presentational/: components.py  popup.py
linter-and-formatter/: README.md  foo.py
open3d_ws/: Pipfile  main.py  meshing_by_smooth.py  meshing_official_sample.py  meshing_rectangular_by_container.py
outlook-mailer/: Pipfile
par-parser/: Pipfile  README.md  main.py
powerpoint-generator/: Pipfile  main.py
scraping/: README.md  headless.py  main.py  pyproject.toml  setup.py  task.sh  test.py  tonarinoyj_by_bs.py  tonarinoyj_by_selenium.py
scraping/libs/: common.py  driver.py  line.py  parser.py
scraping/libs/db/: creator.py  db.py
scraping/libs/parser/: providers.py
src/: config.py  errors.py
summarize-yokogawa-waveform-data/: Pipfile
testing/: NOTE.md  pyproject.toml
testing/Unittest/quickstart/: test_calculation.py
testing/pytest/conftest/: .coverage  conftest.py  test_calculation.py
testing/pytest/quickstart/: calculation.py  test_calculation.py
tips/: README.md
tips/テスト/: README.md  pyproject.toml
tips/テスト/Unittest/quickstart/: test_calculation.py
tips/テスト/doctest/: quickstart.py
tips/テスト/pytest/conftest/: calculation.py  test_calculation.py
tips/テスト/pytest/mock/: salary.py  test_salary.py
tips/テスト/pytest/quickstart/: test_calculation.py
utils/: database.py  exec_embeddable-python.bat  pip-installer_for_embeddable-python.bat
utils/office/excel-wrapper/: README.md  main.py  pyproject.toml
utils/office/excel-wrapper/excel/: accessor.py
(+210 files in other folders)
