[tool.poetry]
name = "graph-viewer"
version = "0.1.0"
description = "csv to graph"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.3"
pandas = "^1.5.0"
numpy = "^1.23.3"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
