[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"
selenium = "^4.3.0"
webdriver-manager = "^3.8.3"
arrow = "^1.2.2"
cprint = "^1.2.2"
colorama = "^0.4.5"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
