[tool.poetry]
name = "testing"
version = "0.1.0"
description = "Practice to testing python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-freezegun = "^0.4.2"
pytest-cov = "^4.0.0"
pytest-xdist = "^2.5.0"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
