[tool.poetry]
name = "excel_wrapper"
version = "0.1.0"
description = ""
authors = ["NasuPanda <xiyuanjunzhi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
pywin32 = "^304"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
